# justwrite

./: .env  docker-compose.yml  manage.py  pyproject.toml
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
blogs/: admin.py  models.py
blogs/migrations/: 0001_initial.py
justwrite/: asgi.py  settings.py  urls.py  views.py  wsgi.py
static/CACHE/css/: styles.0516516fd949.css  styles.05e5b6f3bc63.css  styles.0df0d1150be3.css  styles.13214b5716a7.css  styles.1382a65ca6c3.css  styles.1798fcdac432.css  styles.19628db05235.css  styles.1c074f2abc35.css  styles.2651d4fd7af0.css  styles.2836566444a6.css  styles.283de67b8c50.css  styles.2e445723f1d4.css  styles.3917ae09cc44.css  styles.3e84b40dbb98.css  styles.444b7c3095fe.css  styles.46e930d6deca.css  styles.4fa2cc16e9a3.css  styles.51a68c250724.css  styles.52966544b3a2.css  styles.54fe73840f52.css  styles.5ece701705ff.css  styles.642758701295.css  styles.670502dd668b.css  styles.69b8309a1ae9.css  styles.6a6561b12f84.css  styles.6bbb9f486c3e.css  styles.70f1873cff0c.css  styles.78a805cb3d42.css  styles.793d38f30d8f.css  styles.7bccb446612e.css  styles.7d377c44c4b2.css  styles.80e78491a17d.css  styles.8602109bcd65.css  styles.86bb72dc054c.css  styles.8ced460addaf.css  styles.8d15b61ea2e3.css  styles.9971ebeb530e.css  styles.99f5680b0a46.css  styles.a0e405b72f4d.css  styles.a682d09b5605.css  (+16 more)
static/styles/: styles.scss  variables.scss
static/styles/components/: button.scss  form.scss  modal.scss
static/styles/modules/: header.scss
templates/: index.html
