[tool.poetry]
name = "justwrite"
version = "0.1.0"
description = ""
authors = ["Elie  <elie.pernet@orange.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.7"
django-compressor = "^4.4"
django-libsass = "^0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
